cmake_minimum_required(VERSION 3.0.0)
project(fiber_bm_cpp VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 17)

include_directories(../boost_1_74_0/)
link_directories(../boost_1_74_0/stage/lib)

link_libraries(boost_context)
link_libraries(pthread)
link_libraries(boost_fiber)

if (APPLE)
    add_definitions(-DMACOS)
else (LINUX)
    add_definitions(-DLINUX)
endif()

add_library(fiber_bm facility.cpp FdObj.cpp)

add_executable(pipeline_test        pipeline_test.cpp)
add_executable(thread_test          select/thread_test.cpp)
add_executable(thread_test_mm       select/thread_test_mm.cpp)
add_executable(fork_test            select/fork_test.cpp)
add_executable(fiber_test           select/fiber_test.cpp)
add_executable(thread_test_opt      select/thread_test_opt.cpp)
add_executable(thread_test_k        kevent/thread_test_k.cpp)
add_executable(thread_test_k_opt    kevent/thread_test_k_opt.cpp)
add_executable(single_test          kevent/single_test.cpp)
add_executable(fiber_test_k         kevent/fiber_test_k.cpp)
add_executable(fiber_test_k_opt     kevent/fiber_test_k_opt.cpp)
add_executable(fiber_test_k_opt_mt  kevent/fiber_test_k_opt_mt.cpp)
add_executable(fiber_fiber          kevent/fiber_fiber.cpp)

target_link_libraries(pipeline_test         fiber_bm)
target_link_libraries(thread_test           fiber_bm)
target_link_libraries(thread_test_mm        fiber_bm)
target_link_libraries(fork_test             fiber_bm)
target_link_libraries(fiber_test            fiber_bm)
target_link_libraries(thread_test_opt       fiber_bm)
target_link_libraries(thread_test_k         fiber_bm)
target_link_libraries(thread_test_k_opt     fiber_bm)
target_link_libraries(single_test           fiber_bm)
target_link_libraries(fiber_test_k          fiber_bm)
target_link_libraries(fiber_test_k_opt      fiber_bm)
target_link_libraries(fiber_test_k_opt_mt   fiber_bm)
target_link_libraries(fiber_fiber           fiber_bm)
